remove hard coded dark mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const description =
   "I am a frontend developer at buzzwoo, focusing on building user interfaces with HTML, CSS, and JavaScript";
 ---
 
-<html lang={language ? language : "th"} class="dark">
+<html lang={language ? language : "th"}>
   <head>
     <BaseHead title={title} description={description} thumbnail={thumbnail} />
     <GlobalStyle />
