--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -15,7 +15,7 @@ const canonicalURL = Astro.url;
     {thumbnail &&
     <div class="order-2 lg:order-1 lg:col-start-1 lg:col-end-2 mb-10 lg:mb-0">
       <a href={thumbnail}>
-        <Image src={thumbnail} alt={title} class="object-cover w-full lg:w-4/5 mx-auto my-0 rounded-3xl" width={800} height={533}
+        <Image src={thumbnail} alt={title} class="object-cover aspect-[3/2] w-full lg:w-4/5 mx-auto my-0 rounded-3xl" width={800} height={533}
           loading={'eager'} />
       </a>
     </div>
