--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ const { pathname } = Astro.url;
   <div class="leading-relaxed">
     <p>&copy; 2007&hyphen;now Armno Prommarak.<br>All Rights Reserved.</p>
     <p class="mt-4">Made in <a
-      href="https://www.openstreetmap.org/search?query=chiang%20mai#map=16/18.7880/98.9859"
+      href="https://maps.app.goo.gl/U6Wv4qVwBAVh9sxz8"
       target="_blank"
       rel="nofollow noreferrer" class="font-bold">Chiang Mai</a>, with <a href="https://astro.build" target="_blank" class="font-bold">Astro</a> 🚀.
       </p>
