--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -44,6 +44,13 @@ const defaultDescription = `I'm Armno - a Thai frontend developer at buzzwoo. Ba
 <meta name="twitter:title" content={title}>
 <meta name="twitter:description" content={description ? description : defaultDescription}>
 
+<link
+    rel="alternate"
+    type="application/rss+xml"
+    title="Armno.in.th"
+    href={new URL("rss.xml", Astro.site)}
+/>
+
 <script is:inline>
   const getInitialTheme = () => {
     if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
