tweak layout and font size for larger screens

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 const { pathname } = Astro.url;
 ---
 
-<footer class="pt-20 pb-20 text-xs mx-auto text-center dark:text-slate-200">
+<footer class="pt-20 pb-20 text-xs lg:text-base mx-auto text-center dark:text-slate-200">
   <hr class="mx-auto max-w-xs mb-12 border-0 h-1 bg-slate-700 dark:bg-slate-100">
-  <div class="leading-relaxed">
+  <div class="leading-relaxed lg:leading-loose">
     <p>&copy; 2007&hyphen;now Armno Prommarak.<br>All Rights Reserved.</p>
     <p class="mt-4">Made in <a
       href="https://maps.app.goo.gl/U6Wv4qVwBAVh9sxz8"
