update the uses page

--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -53,7 +53,7 @@
     }
 
     .dark img {
-      @apply opacity-80 transition-opacity;
+      @apply opacity-80 transition-all;
     }
 
     .dark img:hover {
