--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const { pathname } = Astro.url;
 >
   <a href="/" class="inline-block w-12 h-12 md:w-16 md:h-16">
     <svg
-      class="w-12 h-12 md:w-16 md:h-16"
+      class="w-12 h-12 md:w-16 md:h-16 hover:scale-125 hover:rotate-3 transition-transform"
       width="50"
       height="50"
       viewBox="0 0 50 50"
