--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const description =
           <img
             src="/images/ana.jpg"
             alt="Armno Prommarak's photo"
-            class="rounded-full mx-auto md:m-0 md:mr-auto"
+            class="rounded-full mx-auto md:m-0 md:mr-auto lg:w-20 lg:h-20 hover:scale-110 hover:rotate-3 transition-transform"
             loading="eager"
             width={60}
             height={60}
