--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,7 +1,6 @@
 ---
-// import '@fontsource/sarabun/400.css';
-// import '@fontsource/sarabun/700.css';
-// import '@fontsource/frank-ruhl-libre/700.css';
+import '@fontsource/ibm-plex-sans-thai-looped/400.css'
+import '@fontsource/ibm-plex-sans-thai-looped/700.css'
 
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
