--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -22,7 +22,7 @@ const canonicalURL = Astro.url;
     </div>
     }
     <div class="order-1 lg:order-2 lg:col-start-2 lg:col-end-3 lg:flex lg:flex-col lg:justify-center lg:gap-3">
-      <h1 class="text-3xl lg:text-5xl leading-tight lg:leading-snug mb-0 max-w-[80%]">{title}</h1>
+      <h1 class="text-3xl lg:text-5xl leading-tight lg:leading-[1.3] mb-0 max-w-[80%]">{title}</h1>
       <div class="flex gap-5 mt-4 items-start">
         <div>
           <img src="/images/and.jpg" width="40" height="40" alt="Armno's avatar"
