reduce text size for xl

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ const { pathname } = Astro.url;
     </svg>
   </a>
 
-  <nav class="text-sm md:text-base lg:text-lg xl:text-xl flex gap-8 lg:gap-12 dark:text-slate-200">
+  <nav class="text-sm md:text-base lg:text-lg flex gap-8 lg:gap-12 dark:text-slate-200">
     <a
       href="/"
       class={`inline-block ${pathname === "/" ? "font-bold underline" : "no-underline"}`}
