--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const description =
   <body class="antialiased dark:bg-zinc-900 transition-colors">
     <Header />
     <main class="mx-auto max-w-2xl mb-12 lg:max-w-3xl xl:max-w-4xl">
-      <div class="px-6 md:px-2 md:mt-12 md:col-span-2 lg:pt-20 prose prose-slate sm:prose-base lg:prose-lg xl:prose-xl dark:prose-invert dark:text-slate-200">
+      <div class="px-6 md:px-2 md:mt-12 md:col-span-2 lg:pt-20 prose prose-slate sm:prose-base lg:prose-lg dark:prose-invert dark:text-slate-200">
         <div class="mt-10 mb-20 text-center md:text-left">
           <img
             src="/images/ana.jpg"
