add icon to external links in post content

--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -62,6 +62,10 @@
   }
 
   @layer components {
+    .main a[href^="http"][target="_blank"]{
+      @apply after:content-external after:ml-0.5;
+    }
+
     .footnotes {
       @apply text-sm;
     }
