--- a/src/components/TagsList.astro
+++ b/src/components/TagsList.astro
@@ -8,7 +8,7 @@ const { tags } = Astro.props as Props;
 
 {
   tags && tags.length > 0 && (
-    <div class="not-prose flex gap-2 items-start text-sm xl:text-base my-12">
+    <div class="not-prose flex gap-2 lg:gap-4 items-start text-sm xl:text-base my-12">
       <div class="p-0 m-0 font-bold">Tags:</div>
       <ul class="list-none flex flex-wrap gap-2 p-0 m-0 items-start">
         {tags.map((tag) => (
