finish the post

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,6 +1,8 @@
 ---
-import '@fontsource/ibm-plex-sans-thai-looped/400.css'
-import '@fontsource/ibm-plex-sans-thai-looped/700.css'
+import '@fontsource/source-serif-4/400.css';
+import '@fontsource/source-serif-4/700.css';
+import '@fontsource/ibm-plex-sans-thai-looped/thai-400.css'
+import '@fontsource/ibm-plex-sans-thai-looped/thai-700.css'
 
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
