--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -12,7 +12,7 @@ const canonicalURL = Astro.url;
 ---
 
 <PageLayout frontmatter={frontmatter} isPost={true}>
-  <div slot="post-header" class="lg:col-span-full grid grid-cols-1 lg:grid-cols-2 gap-8 lg:mb-20 lg:-ml-32 lg:-mr-32">
+  <div slot="post-header" class="lg:col-span-full grid grid-cols-1 lg:grid-cols-2 gap-8 lg:mb-20 lg:-ml-40 lg:-mr-40 xl:-ml-72 xl:-mr-72">
     {thumbnail &&
     <div class="order-2 lg:order-1 lg:col-start-1 lg:col-end-2 mb-10 lg:mb-0">
       <a href={thumbnail}>
@@ -23,10 +23,10 @@ const canonicalURL = Astro.url;
     }
     <div class="order-1 lg:order-2 lg:col-start-2 lg:col-end-3 lg:flex lg:flex-col lg:justify-center lg:gap-3">
       <h1 class="text-3xl lg:text-5xl leading-tight lg:leading-[1.3] mb-0 max-w-[80%]">{title}</h1>
-      <div class="flex gap-5 mt-4 items-start">
+      <div class="flex gap-5 mt-4 items-start lg:mt-0">
         <div>
           <img src="/images/and.jpg" width="40" height="40" alt="Armno's avatar"
-          class="rounded-full flex-shrink-0 !m-0">
+          class="rounded-full flex-shrink-0 !m-0 lg:!mt-2">
         </div>
         <div class="text-sm leading-5 lg:text-lg">
           <div>Published on <strong>{format(new Date(pubDate), 'MMMM do, yyyy')}</strong></div>
