--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const frontmatter = { title, language, thumbnail, description };
 ---
 
 <PageLayout frontmatter={frontmatter} isPost={false}>
-  <div class="px-6 md:px-2 md:mt-12 md:col-span-2 lg:pt-20 prose prose-slate sm:prose-base lg:prose-lg dark:prose-invert dark:text-slate-200">
+  <div class="md:px-2 md:mt-12 md:col-span-2 lg:pt-20 prose prose-slate sm:prose-base lg:prose-lg dark:prose-invert dark:text-slate-200">
     <div class="mt-10 mb-20 text-center md:text-left">
       <img
         src="/images/ana.jpg"
@@ -25,6 +25,7 @@ const frontmatter = { title, language, thumbnail, description };
         <div class="text-sm md:text-base lg:text-lg xl:text-xl leading-tight">
           Frontend Developer & Team Lead at <a
             href="https://buzzwoo.de"
+            class="no-icon"
             target="_blank">Buzzwoo</a> 🇩🇪.
         </div>
 
