--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,19 +7,12 @@ const { pathname } = Astro.url;
   class="mx-auto px-6 md:px-0 grid grid-flow-col grid-cols-[1fr] items-center max-w-2xl lg:max-w-3xl xl:max-w-4xl"
 >
   <a href="/" class="inline-block w-12 h-12 md:w-16 md:h-16">
-    <svg
-      class="w-12 h-12 md:w-16 md:h-16 hover:scale-125 hover:rotate-3 transition-transform"
-      width="50"
-      height="50"
-      viewBox="0 0 50 50"
-      fill="none"
-      xmlns="http://www.w3.org/2000/svg"
-    >
-      <title>armno.in.th logo</title>
-      <rect width="50" height="50"></rect>
-      <path
-        d="M36.1111 34.8006L25 15.5556L13.8889 34.8006H15.6885L21.9948 23.8777L28.3011 34.8006H36.1111Z"
-        class="fill-black dark:fill-slate-200"></path>
+    <svg class="w-8 h-8 mt-4 lg:w-10 lg:h-10 group" viewBox="0 0 1163 740" xmlns="http://www.w3.org/2000/svg">
+      <g fill-rule="evenodd">
+        <path d="M0 740h360V380Z" class="group-hover:-translate-y-[160px] transition-transform"/>
+        <path d="M1163 0H803v360Z" class="group-hover:translate-y-[160px] transition-transform"/>
+        <path d="M501 741h160V1H501Z"/>
+      </g>
     </svg>
   </a>
 
