finalize post content

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,6 +18,14 @@ const defaultDescription = `I'm Armno - a Thai frontend developer at buzzwoo. Ba
 <meta name="author" content="Armno Prommarak">
 <meta name="theme-color" content="#0c120c">
 
+<style>
+  @font-face {
+    font-family: 'Adjusted Georgia Fallback';
+    src: local(Georgia);
+    size-adjust: 86%;
+}
+</style>
+
 <!--Favicon-->
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
