--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -34,7 +34,7 @@ const TagName = isPost ? 'article' : 'main';
     }
     <GlobalStyle />
 	</head>
-	<body class="antialiased dark:bg-zinc-900 transition-colors" data-pagefind-body={isPost} data-pagefind-ignore={!isPost}>
+	<body class="font-serif antialiased dark:bg-zinc-900 transition-colors" data-pagefind-body={isPost} data-pagefind-ignore={!isPost}>
 		<Header />
     <TagName class="mt-20 mx-auto pb-24 prose prose-slate sm:prose-base lg:prose-lg main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200">
       {isPost && <slot name="post-header" />}
