--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -60,7 +60,7 @@ const content = {
                 >
                   {format(new Date(post.data.pubDate), "dd.MM.yyyy")}
                 </time>
-                <a href={"/blog/" + post.slug}>{post.data.title}</a>
+                <a href={"/blog/" + post.id}>{post.data.title}</a>
               </li>
             ))}
           </ol>
