--- a/src/components/GlobalStyle.astro
+++ b/src/components/GlobalStyle.astro
@@ -2,6 +2,8 @@
   @import "tailwindcss";
   @plugin "@tailwindcss/typography";
 
+  @custom-variant dark (&:where(.dark, .dark *));
+
   @theme {
     --font-serif: "Source Serif 4", "IBM Plex Sans Thai Looped", "Adjusted Georgia Fallback", serif;
   }
