--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -36,7 +36,7 @@ const TagName = isPost ? 'article' : 'main';
 	</head>
 	<body class="font-serif antialiased dark:bg-zinc-900 transition-colors" data-pagefind-body={isPost} data-pagefind-ignore={isPost ? 'index' : 'all'}>
 		<Header />
-    <TagName class="mt-20 mx-auto pb-24 prose prose-slate sm:prose-base main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200">
+    <TagName class="mt-20 mx-auto pb-24 prose main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200">
       {isPost && <slot name="post-header" />}
       <slot />
     </TagName>
