--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -26,7 +26,7 @@ const canonicalURL = Astro.url;
       <div class="flex gap-5 mt-4 items-start lg:mt-0">
         <div>
           <img src="/images/and.jpg" width="40" height="40" alt="Armno's avatar"
-          class="rounded-full flex-shrink-0 !m-0 lg:!mt-2">
+          class="rounded-full shrink-0 !m-0 lg:!mt-2">
         </div>
         <div class="text-sm leading-5 lg:text-lg">
           <div>Published on <strong>{format(new Date(pubDate), 'MMMM do, yyyy')}</strong></div>
