--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ const { pathname } = Astro.url;
 ---
 
 <header
-  class="mx-auto px-6 md:px-0 grid grid-flow-col grid-cols-[1fr] items-center max-w-2xl lg:max-w-3xl xl:max-w-4xl"
+  class="mx-auto px-6 md:px-0 flex flex-row items-center justify-center md:flex-col text-center gap-8 mt-4 md:self-start md:sticky md:top-0 md:mt-12 md:pt-12"
 >
   <a href="/" class="inline-block w-12 h-12 md:w-16 md:h-16">
     <svg
@@ -23,7 +23,7 @@ const { pathname } = Astro.url;
     </svg>
   </a>
 
-  <nav class="text-sm md:text-base lg:text-lg flex gap-8 lg:gap-12 dark:text-slate-200">
+  <nav class="text-sm md:text-base lg:text-lg flex flex-row md:flex-col dark:text-slate-200 gap-4">
     <a
       href="/"
       class={`inline-block ${pathname === "/" ? "font-bold underline" : "no-underline"}`}
