--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -35,11 +35,13 @@ const TagName = isPost ? 'article' : 'main';
     <GlobalStyle />
 	</head>
 	<body class="font-serif antialiased dark:bg-zinc-900 transition-colors" data-pagefind-body={isPost} data-pagefind-ignore={isPost ? 'index' : 'all'}>
+    <div class="md:flex md:flex-row md:max-w-6xl md:mx-auto">
 		<Header />
     <TagName class="mt-20 mx-auto pb-24 prose lg:prose-lg main leading-6 px-6 md:px-0 dark:prose-invert dark:text-slate-200">
       {isPost && <slot name="post-header" />}
       <slot />
     </TagName>
+  </div>
     <Footer />
 	</body>
 </html>
