--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -12,16 +12,16 @@ const canonicalURL = Astro.url;
 ---
 
 <PageLayout frontmatter={frontmatter} isPost={true}>
-  <div slot="post-header" class={`lg:mb-20 ${thumbnail ? 'lg:col-span-full grid grid-cols-1 gap-8 lg:-ml-40 lg:-mr-40 xl:-ml-72 xl:-mr-72  lg:grid-cols-2' : ''}`}>
-    {thumbnail &&
+  <div slot="post-header" class={`lg:mb-20`}>
+    <!-- {thumbnail &&
     <div class="order-2 lg:order-1 lg:col-start-1 lg:col-end-2 mb-10 lg:mb-0">
       <a href={thumbnail}>
         <Image src={thumbnail} alt={title} class="object-cover aspect-[3/2] w-full lg:w-4/5 mx-auto my-0 rounded-3xl" width={800} height={533}
           loading={'eager'} />
       </a>
     </div>
-    }
-    <div class="order-1 lg:order-2 lg:col-start-2 lg:col-end-3 lg:flex lg:flex-col lg:justify-center lg:gap-3">
+    } -->
+    <div class="">
       <h1 class="text-3xl lg:text-5xl leading-tight lg:leading-[1.3] mb-0 max-w-[80%]">{title}</h1>
       <div class="flex gap-5 mt-4 items-start lg:mt-0">
         <div>
